Fixed readability removing dots behind text

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -225,10 +225,15 @@ a {
     margin-left: auto;
     margin-right: auto;
     width: $pageWidth;
+    background-color: var(--light);
+
     @media all and (max-width: $fullPageWidth) {
       width: initial;
       margin-left: 0;
       margin-right: 0;
+      body {
+        background-image: none;
+      }
     }
   }
 }
